# imgresize

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  resize_png.cpp
benchmarks/: CMakeLists.txt  bench_resize.cpp
include/imgresize/: perf_report.h  resize.h  types.h
reports/: resize_perf_report.txt
src/: perf_report.cpp  resize.cpp
tests/: CMakeLists.txt  test_resize.cpp
